
* GITHUB#11929: MMapDirectory gives more granular control on which files to
  preload. (Adrien Grand, Uwe Schindler)

* GITHUB#11999: MemoryIndex now supports stored fields. (Alan Woodward)

* GITHUB#11997: Add IntField, LongField, FloatField and DoubleField: easy to
  use numeric fields that perform well both for filtering and sorting.
  (Francisco Fernández Castaño)

Improvements
---------------------
* GITHUB#11785: Improve Tessellator performance by delaying calls to the method
  #isIntersectingPolygon (Ignacio Vera)

* GITHUB#687: speed up IndexSortSortedNumericDocValuesRangeQuery#BoundedDocIdSetIterator
  construction using bkd binary search. (Jianping Weng)

* GITHUB#11985: ExitableTerms to override Terms#getMin and Terms#getMax in order to avoid
  iterating through the terms when the wrapped implementation caches such values. (Luca Cavanna)

* GITHUB#11860: Improve storage efficiency of connections in the HNSW graph that Lucene uses for
  vector search. (Ben Trent)

* GITHUB#12008: Clean up LongRange#verifyAndEncode logic to remove unnecessary NaN checks. (Greg Miller)

* GITHUB#12003: Minor cleanup/improvements to IndexSortSortedNumericDocValuesRangeQuery. (Greg Miller)

* GITHUB#12016: Upgrade lucene/expressions to use antlr 4.11.1 (Andriy Redko)

Bug Fixes
---------------------
* GITHUB#11726: Indexing term vectors on large documents could fail due to
  trying to apply a dictionary whose size is greater than the maximum supported
  window size for LZ4. (Adrien Grand)

* GITHUB#11768: Taxonomy and SSDV faceting now correctly breaks ties by preferring smaller ordinal
  values. (Greg Miller)

* GITHUB#11907: Fix latent casting bugs in BKDWriter. (Ben Trent)

* GITHUB#11954: Remove QueryTimeout#isTimeoutEnabled method and move check to caller. (Shubham Chaudhary)

* GITHUB#11950: Fix NPE in BinaryRangeFieldRangeQuery variants when the queried field doesn't exist
  in a segment or is of the wrong type. (Greg Miller)
